styles.css
:root {
    font-family: "Playfair Display", serif;
}

html, body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background: linear-gradient(#3A5A40, #588157, #A3B18A);
    min-height: 100vh;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

html::-webkit-scrollbar {
    display: none;
}

#logo {
    width: 100px;
    margin-bottom: -5rem;
}

header {
    text-align: center;
    font-size: 2rem;
    color: #b1d86e;
}

.sub {
    color: #9eb675ee;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#add {
    width: 3rem;
    height: 3rem;
    margin-bottom: 2rem;
    background: linear-gradient(#588157, #1A5031);
    border: none;
    border-radius: 50%;
    color: #9eb675ee;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.409);
    font-size: 3rem;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

#shelf {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
}

#shelf div {
    background: linear-gradient(#588157, #1A5031, #0C2C1C);
    color: #bed29bee;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.409);
    font-size: 1.2rem;
    font-weight: bold;
    width: 300px;
    border-radius: 10px;
    padding: 1.5rem;
    margin: 1rem;
}

#shelf button {
    padding: 0px 15px 3px 15px;
    font-family: "Playfair Display", serif;
    font-weight: bold;
    font-size: 1.2rem;
    border-radius: 10px;
    border: none;
    cursor: pointer;
}

.rButton {
    box-shadow: none;
    color: #0C2C1C;
    background-color: #c3d6a2ee;
    margin-left: 5px;
}

.remove {
    float: right;
    box-shadow: 0px 0px 20px #c3d6a232;
    color: #c3d6a2ee;
    background-color: rgba(0, 0, 0, 0.103);
}

:modal {
    color: #bed29bee;
    background-color: #588157;
    padding: 1rem;
    border-radius: 10px;
    font-weight: bold;
}

:modal button, select {
    color: #588157;
    background-color: #0c2c1c;
    font-family: "Playfair Display", serif;
    font-weight: bold;
    border: none;
    border-radius: 5px;
    margin-bottom: 1rem;
}

:modal input {
    background-color: #bed29bee;
    border-radius: 2px;
    color: #0c2c1c;
    border: none;
    font-weight: bold;
    margin-bottom: 1rem;
}

